refact for better code separation
