# api/internal/auth/controller/models.go
@@ -1,6 +1,6 @@
-package auth
+package controllers
 
-import "api/internal/user"
+import userControllers "api/internal/user/controller"
 
 // LoginPayload represents the payload for logging in via google oauth token
 // @name LoginPayload
@@ -11,6 +11,6 @@ type LoginPayload struct {
 // LoginResponse represents the response for logging in
 // @name LoginResponse
 type LoginResponse struct {
-	Token string            `json:"token" example:"eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9..."`
-	User  user.UserResponse `json:"user"`
+	Token string                       `json:"token" example:"eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9..."`
+	User  userControllers.UserResponse `json:"user"`
 }
